--- a/streaming-cassava.cabal
+++ b/streaming-cassava.cabal
@@ -26,12 +26,12 @@ source-repository head
 
 library
   exposed-modules:     Streaming.Cassava
-  build-depends:       base >=4.8 && <5
+  build-depends:       base >=4.8 
                      , bytestring
-                     , cassava == 0.5.*
+                     , cassava >= 0.5
                      , mtl
-                     , streaming >= 0.1.1.0 && < 0.3
-                     , streaming-bytestring == 0.2.*
+                     , streaming >= 0.1.1.0 
+                     , streaming-bytestring
                      , transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -43,9 +43,9 @@ test-suite roundtrip
   main-is:             roundtrip.hs
   build-depends:       streaming-cassava
                      , base
-                     , hspec >= 2.4 && < 2.8
-                     , mtl >= 2.2.1 && < 2.3
-                     , QuickCheck == 2.*
+                     , hspec >= 2.4
+                     , mtl >= 2.2.1 
+                     , QuickCheck 
                      , quickcheck-instances
                      , streaming
                      , text
